added in navlinks for breakfast and lunch

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,1 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Charmonman&display=swap');
+@import 'abstracts/variables';
+
+@import 'components/header.scss';
 @import 'components/breakfast.scss';
