--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Charmonman&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Charmonman&family=Open+Sans+Condensed:wght@300;700&display=swap');
+
 @import 'abstracts/variables';
 
 @import 'components/header.scss';
 @import 'components/breakfast.scss';
+
+
+
+// change name!!!
+@import 'components/shared';
