added drop down menu

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,3 +1,4 @@
 $logo-font: 'Charmonman', cursive;
-$menu-font: 'Open Sans Condensed', serif;
-$h1-font: 'Open Sans Condensed', serif;
+$h1-font: 'Open Sans Condensed', sans-serif;
+$body-font: 'Open Sans Condensed', sans-serif;
+$capital-font: 'Julius Sans One', sans-serif;
