--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Charmonman&family=Open+Sans+Condensed:wght@300;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Charmonman&family=Julius+Sans+One&family=Open+Sans+Condensed:wght@300;700&display=swap');
 @import 'abstracts/variables';
 
 @import 'components/header.scss';
